[tool.poetry]
name = "pdf-text-entities-dnn"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf = "^4.0.1"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
click = "^8.1.7"
progress = "^1.6"
scikit-learn-intelex = "^2024.1.0"
scikit-learn = "^1.4.0"
numpy = "^1.26.4"
tiktoken = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
